tree element now respects height of its scrollable parent div which in turn fixes the node being scrolled to on "reveal in tree" click  when the node is out of view

--- a/src/devtools/client/debugger/src/components/PrimaryPanes/Sources.css
+++ b/src/devtools/client/debugger/src/components/PrimaryPanes/Sources.css
@@ -20,6 +20,7 @@
   flex-direction: column;
   overflow-x: auto;
   overflow-y: hidden;
+  height: 100%;
 }
 
 .sources-pane.expanded {
@@ -34,11 +35,14 @@
 .sources-list {
   flex: 1;
   display: flex;
+  height: 100%;
 }
 
 .sources-list .managed-tree {
   flex: 1;
   display: flex;
+  height: 100%;
+  overflow-y: auto;
 }
 
 .sources-list .managed-tree .tree {
